ConEmu 140908 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,9 +13,9 @@ location_arc=2471575,x82378EB5,http://downloads.sf.net/project/conemu/Preview/Co
 location_exe=3172288,x48C10960,http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.140814.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=140905
-location_arc=2026041,x0D213A19,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.140905.7z?use_mirror=autoselect
-location_exe=3177408,xF7D348EF,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.140905.exe?use_mirror=autoselect
+version=140908
+location_arc=2019161,xB899E4A5,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.140908.7z?use_mirror=autoselect
+location_exe=3164096,x11190B4D,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.140908.exe?use_mirror=autoselect
 
 [ConEmu_Stable]
 version=120727c
