--- a/version.ini
+++ b/version.ini
@@ -13,9 +13,9 @@ location_arc=2471575,x82378EB5,http://downloads.sf.net/project/conemu/Preview/Co
 location_exe=3172288,x48C10960,http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.140814.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=141104a
-location_arc=2067833,x96900EB5,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.141104a.7z?use_mirror=autoselect
-location_exe=3224008,x588A54A7,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.141104a.exe?use_mirror=autoselect
+version=141105
+location_arc=2067968,xDFFFE950,http://github.com/Maximus5/ConEmu/releases/download/v14.11.05/ConEmuPack.141105.7z
+location_exe=3222976,xBA8E2216,http://github.com/Maximus5/ConEmu/releases/download/v14.11.05/ConEmuSetup.141105.exe
 
 [ConEmu_Stable]
 version=120727c
