--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_exe=3172288,x48C10960,http://downloads.sf.net/project/conemu/Preview/Co
 
 [ConEmu_Devel_2]
 version=141105
-location_arc=2067968,xDFFFE950,http://github.com/Maximus5/ConEmu/releases/download/v14.11.05/ConEmuPack.141105.7z
-location_exe=3222976,xBA8E2216,http://github.com/Maximus5/ConEmu/releases/download/v14.11.05/ConEmuSetup.141105.exe
+location_arc=2067968,xDFFFE950,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.141105.7z?use_mirror=autoselect
+location_exe=3222976,xBA8E2216,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.141105.exe?use_mirror=autoselect
 
 [ConEmu_Stable]
 version=120727c
