Set links to github

--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,10 @@ location_exe=4321224,x10D589EC,http://downloads.sf.net/project/conemu/Preview/Co
 
 [ConEmu_Devel_2]
 version=150209
-location_arc=2129762,x2E950465,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.150209.7z?use_mirror=autoselect
-location_exe=4384192,x463476FD,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.150209.exe?use_mirror=autoselect
+;location_arc=2129762,x2E950465,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.150209.7z?use_mirror=autoselect
+location_arc=2129762,x2E950465,https://github.com/Maximus5/ConEmu/releases/download/v15.02.09/ConEmuPack.150209.7z
+;location_exe=4384192,x463476FD,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.150209.exe?use_mirror=autoselect
+location_exe=4384192,x463476FD,https://github.com/Maximus5/ConEmu/releases/download/v15.02.09/ConEmuSetup.150209.exe
 
 [ConEmu_Stable]
 version=120727c
