--- a/version.ini
+++ b/version.ini
@@ -13,11 +13,9 @@ location_arc=2117525,x59B8740E,http://downloads.sf.net/project/conemu/Preview/Co
 location_exe=4321224,x10D589EC,http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.150119a.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=150209
-;location_arc=2129762,x2E950465,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.150209.7z?use_mirror=autoselect
-location_arc=2129762,x2E950465,https://github.com/Maximus5/ConEmu/releases/download/v15.02.09/ConEmuPack.150209.7z
-;location_exe=4384192,x463476FD,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.150209.exe?use_mirror=autoselect
-location_exe=4384192,x463476FD,https://github.com/Maximus5/ConEmu/releases/download/v15.02.09/ConEmuSetup.150209.exe
+version=150215
+location_arc=2139959,xB0BF34A9,http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.150215.7z?use_mirror=autoselect
+location_exe=4410816,x4A813E05,http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.150215.exe?use_mirror=autoselect
 
 [ConEmu_Stable]
 version=120727c
