--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ defaults:
       layout: "root"
       title: "ConEmu - Windows terminal emulator"
       docfolder: /en
+      pagelang: en
   -
     scope:
       path: "en"
@@ -34,6 +35,7 @@ defaults:
       layout: "docs_en"
       title: "ConEmu - Documentation"
       docfolder: /en
+      pagelang: en
   -
     scope:
       path: "en-w"
@@ -42,6 +44,7 @@ defaults:
       layout: "docs_en"
       title: "ConEmu - Documentation"
       docfolder: /en-w
+      pagelang: en
   -
     scope:
       path: "ru"
@@ -50,6 +53,7 @@ defaults:
       layout: "docs_ru"
       title: "ConEmu - эмулятор терминала Windows"
       docfolder: /ru
+      pagelang: ru
   -
     scope:
       path: "ru-w"
@@ -58,3 +62,4 @@ defaults:
       layout: "docs_ru"
       title: "ConEmu - эмулятор терминала Windows"
       docfolder: /ru-w
+      pagelang: ru
