Refine TOC for GuiMacro

--- a/_config.yml
+++ b/_config.yml
@@ -442,6 +442,30 @@ toc:
         rus: "Взятие пути из окна Проводника"
         url: "ExplorerPath.html"
   -
+    eng: "GuiMacro"
+    rus: "GuiMacro"
+    id:  "guimacro"
+    url: ""
+    children:
+      - eng: "GUI Macros"
+        rus: "GUI макросы"
+        url: "GuiMacro.html"
+      - eng: "How GuiMacro may be executed"
+        rus: "Способы вызова"
+        url: "GuiMacro.html#HowToCall"
+      - eng: "Syntax"
+        rus: "Синтаксис"
+        url: "GuiMacro.html#Syntax"
+      - eng: "List of functions"
+        rus: "Список функций"
+        url: "GuiMacro.html#List_of_functions"
+      - eng: "Scripting settings"
+        rus: "Настройки из скриптов"
+        url: "GuiMacro.html#SetOptionExample"
+      - eng: "GuiMacro examples"
+        rus: "GuiMacro примеры"
+        url: "GuiMacro.html#Examples"
+  -
     eng: "Controls"
     rus: "Управление"
     id:  "controls"
@@ -483,10 +507,6 @@ toc:
         eng: "Text selection"
         rus: "Работа с текстом"
         url: "TextSelection.html"
-      -
-        eng: "GUI Macros"
-        rus: "GUI макросы"
-        url: "GuiMacro.html"
       -
         eng: "Far and touchscreen"
         rus: "Far и тачскрин"
