--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -206,6 +206,18 @@
               rus: "Appearance"
               url: "SettingsAppearance.html"
             -
+              eng: "Background"
+              rus: "Background"
+              url: "SettingsBackground.html"
+            -
+              eng: "Tab bar"
+              rus: "Tab bar"
+              url: "SettingsTabBar.html"
+            -
+              eng: "Confirm"
+              rus: "Confirm"
+              url: "SettingsConfirm.html"
+            -
               eng: "Task bar"
               rus: "Task bar"
               url: "SettingsTaskBar.html"
@@ -247,10 +259,6 @@
               eng: "Transparency"
               rus: "Transparency"
               url: "SettingsTransparency.html"
-            -
-              eng: "Tabs"
-              rus: "Tabs"
-              url: "SettingsTabBar.html"
             -
               eng: "Status bar"
               rus: "Status bar"
