--- a/version.ini
+++ b/version.ini
@@ -8,14 +8,14 @@ location_arc=1489707,x534EAB55,http://conemu-maximus5.googlecode.com/files/ConEm
 location_exe=2381432,xD67B095A,http://conemu-maximus5.googlecode.com/files/ConEmuSetup.120727c.exe
 
 [ConEmu_Preview_2]
-version=150813b
-location_arc=2225230,xC1C6FB0E,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13b/ConEmuPack.150813b.7z
-location_exe=4524456,x398B406E,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13b/ConEmuSetup.150813b.exe
+version=150813c
+location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
+location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=150813b
-location_arc=2225230,xC1C6FB0E,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13b/ConEmuPack.150813b.7z
-location_exe=4524456,x398B406E,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13b/ConEmuSetup.150813b.exe
+version=150813c
+location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
+location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Stable]
 version=120727c
