--- a/version.ini
+++ b/version.ini
@@ -13,9 +13,9 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=150813c
-location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
-location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
+version=150908
+location_arc=2229983,xA61FEA7A,https://github.com/Maximus5/ConEmu/releases/download/v15.09.08/ConEmuPack.150908.7z
+location_exe=4528552,xC2AFD3AA,https://github.com/Maximus5/ConEmu/releases/download/v15.09.08/ConEmuSetup.150908.exe
 
 [ConEmu_Stable]
 version=120727c
