ConEmu 150910 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -1,6 +1,7 @@
 ; This file is always available online:
-; http://conemu-maximus5.googlecode.com/svn/trunk/ConEmu/version.ini
 ; http://conemu.github.io/version.ini
+; http://www.conemu.ru/version.ini
+; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
 version=120727c
@@ -13,9 +14,9 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=150908
-location_arc=2229983,xA61FEA7A,https://github.com/Maximus5/ConEmu/releases/download/v15.09.08/ConEmuPack.150908.7z
-location_exe=4528552,xC2AFD3AA,https://github.com/Maximus5/ConEmu/releases/download/v15.09.08/ConEmuSetup.150908.exe
+version=150910
+location_arc=2230639,xBA690F21,https://github.com/Maximus5/ConEmu/releases/download/v15.09.10/ConEmuPack.150910.7z
+location_exe=4528552,x7A7FB174,https://github.com/Maximus5/ConEmu/releases/download/v15.09.10/ConEmuSetup.150910.exe
 
 [ConEmu_Stable]
 version=120727c
