--- a/version.ini
+++ b/version.ini
@@ -14,9 +14,9 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=150910
-location_arc=2230639,xBA690F21,https://github.com/Maximus5/ConEmu/releases/download/v15.09.10/ConEmuPack.150910.7z
-location_exe=4528552,x7A7FB174,https://github.com/Maximus5/ConEmu/releases/download/v15.09.10/ConEmuSetup.150910.exe
+version=150913
+location_arc=2235025,x098AA99D,https://github.com/Maximus5/ConEmu/releases/download/v15.09.13/ConEmuPack.150913.7z
+location_exe=4535208,x208221AB,https://github.com/Maximus5/ConEmu/releases/download/v15.09.13/ConEmuSetup.150913.exe
 
 [ConEmu_Stable]
 version=120727c
