--- a/version.ini
+++ b/version.ini
@@ -14,9 +14,9 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=150913
-location_arc=2235025,x098AA99D,https://github.com/Maximus5/ConEmu/releases/download/v15.09.13/ConEmuPack.150913.7z
-location_exe=4535208,x208221AB,https://github.com/Maximus5/ConEmu/releases/download/v15.09.13/ConEmuSetup.150913.exe
+version=151006
+location_arc=2239325,x7D63CFD1,https://github.com/Maximus5/ConEmu/releases/download/v15.10.06/ConEmuPack.151006.7z
+location_exe=4538280,xB6B4911B,https://github.com/Maximus5/ConEmu/releases/download/v15.10.06/ConEmuSetup.151006.exe
 
 [ConEmu_Stable]
 version=120727c
