--- a/version.ini
+++ b/version.ini
@@ -14,9 +14,9 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151006
-location_arc=2239325,x7D63CFD1,https://github.com/Maximus5/ConEmu/releases/download/v15.10.06/ConEmuPack.151006.7z
-location_exe=4538280,xB6B4911B,https://github.com/Maximus5/ConEmu/releases/download/v15.10.06/ConEmuSetup.151006.exe
+version=151015
+location_arc=2250854,x8C29AA80,https://github.com/Maximus5/ConEmu/releases/download/v15.10.15/ConEmuPack.151015.7z
+location_exe=4552104,x6EFFBF3E,https://github.com/Maximus5/ConEmu/releases/download/v15.10.15/ConEmuSetup.151015.exe
 
 [ConEmu_Stable]
 version=120727c
