ConEmu 151011 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -9,9 +9,11 @@ location_arc=1489707,x534EAB55,http://conemu-maximus5.googlecode.com/files/ConEm
 location_exe=2381432,xD67B095A,http://conemu-maximus5.googlecode.com/files/ConEmuSetup.120727c.exe
 
 [ConEmu_Preview_2]
-version=150813c
-location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
-location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
+version=151011
+location_arc=2234411,x6B26BA55,https://github.com/Maximus5/ConEmu/releases/download/v15.10.11/ConEmuPack.151011.7z
+location_exe=4514208,xCEC5319F,https://github.com/Maximus5/ConEmu/releases/download/v15.10.11/ConEmuSetup.151011.exe
+md5_arc=22c712efff33f8d8702ed9e4b86af134
+md5_exe=2de4c16a05f4c9737018e7704f604408
 
 [ConEmu_Devel_2]
 version=151015
