--- a/version.ini
+++ b/version.ini
@@ -14,22 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151015
-location_arc=2250854,x8C29AA80,https://github.com/Maximus5/ConEmu/releases/download/v15.10.15/ConEmuPack.151015.7z
-location_exe=4552104,x6EFFBF3E,https://github.com/Maximus5/ConEmu/releases/download/v15.10.15/ConEmuSetup.151015.exe
-
-[ConEmu_Stable]
-version=120727c
-location_arc=1489707,x534EAB55,http://conemu-maximus5.googlecode.com/files/ConEmuPack.120727c.7z
-location_exe=2381432,xD67B095A,http://conemu-maximus5.googlecode.com/files/ConEmuSetup.120727c.exe
-
-[ConEmu_Preview]
-version=140114a
-location_arc=1833906,x40D5D156,http://conemu-maximus5.googlecode.com/files/ConEmuPack.140114a.7z
-location_exe=2839648,xF2AA5967,http://conemu-maximus5.googlecode.com/files/ConEmuSetup.140114a.exe
-
-[ConEmu_Devel]
-version=140114a
-location_arc=1833906,x40D5D156,http://conemu-maximus5.googlecode.com/files/ConEmuPack.140114a.7z
-location_exe=2839648,xF2AA5967,http://conemu-maximus5.googlecode.com/files/ConEmuSetup.140114a.exe
-
+version=151025
+location_arc=2252675,x8A3BDB48,https://github.com/Maximus5/ConEmu/releases/download/v15.10.25/ConEmuPack.151025.7z
+location_exe=4556200,x9A462D97,https://github.com/Maximus5/ConEmu/releases/download/v15.10.25/ConEmuSetup.151025.exe
+md5_arc=9d6a4a04ae751700761034808b6349a9
+md5_exe=4296d576473e4fa59739f3178eb79940
