--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151025
-location_arc=2252675,x8A3BDB48,https://github.com/Maximus5/ConEmu/releases/download/v15.10.25/ConEmuPack.151025.7z
-location_exe=4556200,x9A462D97,https://github.com/Maximus5/ConEmu/releases/download/v15.10.25/ConEmuSetup.151025.exe
-md5_arc=9d6a4a04ae751700761034808b6349a9
-md5_exe=4296d576473e4fa59739f3178eb79940
+version=151029
+location_arc=2260806,x86BE9EBB,https://github.com/Maximus5/ConEmu/releases/download/v15.10.29/ConEmuPack.151029.7z
+location_exe=4562856,xF9D7FCA3,https://github.com/Maximus5/ConEmu/releases/download/v15.10.29/ConEmuSetup.151029.exe
+md5_arc=506c682f02a192752c2bd772a1072630
+md5_exe=da53b39adefd4998c4f06bfe766d4ecc
