--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151029
-location_arc=2260806,x86BE9EBB,https://github.com/Maximus5/ConEmu/releases/download/v15.10.29/ConEmuPack.151029.7z
-location_exe=4562856,xF9D7FCA3,https://github.com/Maximus5/ConEmu/releases/download/v15.10.29/ConEmuSetup.151029.exe
-md5_arc=506c682f02a192752c2bd772a1072630
-md5_exe=da53b39adefd4998c4f06bfe766d4ecc
+version=151101
+location_arc=2262777,x4CFBA269,https://github.com/Maximus5/ConEmu/releases/download/v15.11.01/ConEmuPack.151101.7z
+location_exe=4566952,xD464DDCE,https://github.com/Maximus5/ConEmu/releases/download/v15.11.01/ConEmuSetup.151101.exe
+md5_arc=6ff7c7e92e4ee7cedbbc24e2a32c7962
+md5_exe=6f9d4578c38e8f9beeebcb520322b776
