ConEmu 151109 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151101
-location_arc=2262777,x4CFBA269,https://github.com/Maximus5/ConEmu/releases/download/v15.11.01/ConEmuPack.151101.7z
-location_exe=4566952,xD464DDCE,https://github.com/Maximus5/ConEmu/releases/download/v15.11.01/ConEmuSetup.151101.exe
-md5_arc=6ff7c7e92e4ee7cedbbc24e2a32c7962
-md5_exe=6f9d4578c38e8f9beeebcb520322b776
+version=151109
+location_arc=2268057,x4C8AF384,https://github.com/Maximus5/ConEmu/releases/download/v15.11.09/ConEmuPack.151109.7z
+location_exe=4575656,x442366DD,https://github.com/Maximus5/ConEmu/releases/download/v15.11.09/ConEmuSetup.151109.exe
+md5_arc=83b0f70c66567b854c1f1513c17a3181
+md5_exe=f9f0ddbc3fb4e7300836790962e4f0a9
