ConEmu 151115 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151109
-location_arc=2268057,x4C8AF384,https://github.com/Maximus5/ConEmu/releases/download/v15.11.09/ConEmuPack.151109.7z
-location_exe=4575656,x442366DD,https://github.com/Maximus5/ConEmu/releases/download/v15.11.09/ConEmuSetup.151109.exe
-md5_arc=83b0f70c66567b854c1f1513c17a3181
-md5_exe=f9f0ddbc3fb4e7300836790962e4f0a9
+version=151115
+location_arc=2270055,x8F8FA080,https://github.com/Maximus5/ConEmu/releases/download/v15.11.15/ConEmuPack.151115.7z
+location_exe=4580264,x24EF4642,https://github.com/Maximus5/ConEmu/releases/download/v15.11.15/ConEmuSetup.151115.exe
+md5_arc=360d3064912a86bbf769a4cca85a6124
+md5_exe=93c405b2b87386ee1f644b52e05c99ac
