--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151115
-location_arc=2270055,x8F8FA080,https://github.com/Maximus5/ConEmu/releases/download/v15.11.15/ConEmuPack.151115.7z
-location_exe=4580264,x24EF4642,https://github.com/Maximus5/ConEmu/releases/download/v15.11.15/ConEmuSetup.151115.exe
-md5_arc=360d3064912a86bbf769a4cca85a6124
-md5_exe=93c405b2b87386ee1f644b52e05c99ac
+version=151119
+location_arc=2269144,x9D0C2ABA,https://github.com/Maximus5/ConEmu/releases/download/v15.11.19/ConEmuPack.151119.7z
+location_exe=4580776,xB0D613FA,https://github.com/Maximus5/ConEmu/releases/download/v15.11.19/ConEmuSetup.151119.exe
+md5_arc=0a60d89a24138d9beedcdba466429c04
+md5_exe=7446d22416e781e178d52d3defe543da
