--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151119
-location_arc=2269144,x9D0C2ABA,https://github.com/Maximus5/ConEmu/releases/download/v15.11.19/ConEmuPack.151119.7z
-location_exe=4580776,xB0D613FA,https://github.com/Maximus5/ConEmu/releases/download/v15.11.19/ConEmuSetup.151119.exe
-md5_arc=0a60d89a24138d9beedcdba466429c04
-md5_exe=7446d22416e781e178d52d3defe543da
+version=151122
+location_arc=2270755,x6244723C,https://github.com/Maximus5/ConEmu/releases/download/v15.11.22/ConEmuPack.151122.7z
+location_exe=4582312,x99A4F8F4,https://github.com/Maximus5/ConEmu/releases/download/v15.11.22/ConEmuSetup.151122.exe
+md5_arc=dd796109055678eb694743e91b5528ee
+md5_exe=f6c14d618c9b0dc0842de1d5de584d4d
