ConEmu 151126 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151122
-location_arc=2270755,x6244723C,https://github.com/Maximus5/ConEmu/releases/download/v15.11.22/ConEmuPack.151122.7z
-location_exe=4582312,x99A4F8F4,https://github.com/Maximus5/ConEmu/releases/download/v15.11.22/ConEmuSetup.151122.exe
-md5_arc=dd796109055678eb694743e91b5528ee
-md5_exe=f6c14d618c9b0dc0842de1d5de584d4d
+version=151126
+location_arc=2276035,x0CBBF100,https://github.com/Maximus5/ConEmu/releases/download/v15.11.26/ConEmuPack.151126.7z
+location_exe=4589992,x68F2774A,https://github.com/Maximus5/ConEmu/releases/download/v15.11.26/ConEmuSetup.151126.exe
+md5_arc=05416bd10060a4420bc47e4309f6bd64
+md5_exe=0a128fcffb11e377016b78618815487e
