ConEmu 151129 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151126
-location_arc=2276035,x0CBBF100,https://github.com/Maximus5/ConEmu/releases/download/v15.11.26/ConEmuPack.151126.7z
-location_exe=4589992,x68F2774A,https://github.com/Maximus5/ConEmu/releases/download/v15.11.26/ConEmuSetup.151126.exe
-md5_arc=05416bd10060a4420bc47e4309f6bd64
-md5_exe=0a128fcffb11e377016b78618815487e
+version=151129
+location_arc=2275628,xD8A4AAA0,https://github.com/Maximus5/ConEmu/releases/download/v15.11.29/ConEmuPack.151129.7z
+location_exe=4588968,x592E0A04,https://github.com/Maximus5/ConEmu/releases/download/v15.11.29/ConEmuSetup.151129.exe
+md5_arc=3d6f874a9e3e41955bd820515dccf49a
+md5_exe=0d68dcd782dd87438d20ea56258024e0
