ConEmu 151202 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151129
-location_arc=2275628,xD8A4AAA0,https://github.com/Maximus5/ConEmu/releases/download/v15.11.29/ConEmuPack.151129.7z
-location_exe=4588968,x592E0A04,https://github.com/Maximus5/ConEmu/releases/download/v15.11.29/ConEmuSetup.151129.exe
-md5_arc=3d6f874a9e3e41955bd820515dccf49a
-md5_exe=0d68dcd782dd87438d20ea56258024e0
+version=151202
+location_arc=2279058,x0F5D6545,https://github.com/Maximus5/ConEmu/releases/download/v15.12.02/ConEmuPack.151202.7z
+location_exe=4591528,xB48AB3DB,https://github.com/Maximus5/ConEmu/releases/download/v15.12.02/ConEmuSetup.151202.exe
+md5_arc=49f308a52b6d0e811fc18b2ae259eee2
+md5_exe=5f2e753478409e3b76fa88ca2f9b9987
