Add information about terminal connector

--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -459,6 +459,10 @@
   url: "CygwinMsys.html"
   children:
     -
+      eng: "Cygwin/Msys connector"
+      rus: "Cygwin/Msys connector"
+      url: "CygwinMsysConnector.html"
+    -
       eng: "Cygwin & ${HOME}"
       rus: "Cygwin & ${HOME}"
       url: "CygwinStartDir.html"
