--- a/version.ini
+++ b/version.ini
@@ -14,8 +14,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151202
-location_arc=2279058,x0F5D6545,https://github.com/Maximus5/ConEmu/releases/download/v15.12.02/ConEmuPack.151202.7z
-location_exe=4591528,xB48AB3DB,https://github.com/Maximus5/ConEmu/releases/download/v15.12.02/ConEmuSetup.151202.exe
-md5_arc=49f308a52b6d0e811fc18b2ae259eee2
-md5_exe=5f2e753478409e3b76fa88ca2f9b9987
+version=151205
+location_arc=2282310,x80CC8912,https://github.com/Maximus5/ConEmu/releases/download/v15.12.05/ConEmuPack.151205.7z
+location_exe=4596136,xDE494A14,https://github.com/Maximus5/ConEmu/releases/download/v15.12.05/ConEmuSetup.151205.exe
+md5_arc=93037778d1792679c5f2e7bbecea8a34
+md5_exe=84d6ef73f70897fa1408c3d55106c476
