--- a/version.ini
+++ b/version.ini
@@ -4,9 +4,11 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=120727c
-location_arc=1489707,x534EAB55,http://conemu-maximus5.googlecode.com/files/ConEmuPack.120727c.7z
-location_exe=2381432,xD67B095A,http://conemu-maximus5.googlecode.com/files/ConEmuSetup.120727c.exe
+version=150813c
+location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
+location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
+md5_arc=3b0176cd9e225d801aed8af7dfbd429d
+md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 
 [ConEmu_Preview_2]
 version=150813c
