--- a/version.ini
+++ b/version.ini
@@ -15,6 +15,8 @@ md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 version=150813c
 location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
+md5_arc=3b0176cd9e225d801aed8af7dfbd429d
+md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 
 [ConEmu_Devel_2]
 version=151205
