--- a/version.ini
+++ b/version.ini
@@ -1,5 +1,4 @@
 ; This file is always available online:
-; https://conemu.github.io/version.ini
 ; http://conemu.github.io/version.ini
 ; http://www.conemu.ru/version.ini
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
@@ -15,12 +14,10 @@ md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 version=150813c
 location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
-md5_arc=3b0176cd9e225d801aed8af7dfbd429d
-md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 
 [ConEmu_Devel_2]
-version=151205
-location_arc=2282310,x80CC8912,https://github.com/Maximus5/ConEmu/releases/download/v15.12.05/ConEmuPack.151205.7z
-location_exe=4596136,xDE494A14,https://github.com/Maximus5/ConEmu/releases/download/v15.12.05/ConEmuSetup.151205.exe
-md5_arc=93037778d1792679c5f2e7bbecea8a34
-md5_exe=84d6ef73f70897fa1408c3d55106c476
+version=151207
+location_arc=2283902,x0D37D1D1,https://github.com/Maximus5/ConEmu/releases/download/v15.12.07/ConEmuPack.151207.7z
+location_exe=4598184,x287EDCB7,https://github.com/Maximus5/ConEmu/releases/download/v15.12.07/ConEmuSetup.151207.exe
+md5_arc=cf3c542f004b75c5310c637fc4dcccd6
+md5_exe=a1bc2833447d8d110bc9f37c835010f3
