ConEmu 151208 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -16,8 +16,8 @@ location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/downl
 location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
 
 [ConEmu_Devel_2]
-version=151207
-location_arc=2283902,x0D37D1D1,https://github.com/Maximus5/ConEmu/releases/download/v15.12.07/ConEmuPack.151207.7z
-location_exe=4598184,x287EDCB7,https://github.com/Maximus5/ConEmu/releases/download/v15.12.07/ConEmuSetup.151207.exe
-md5_arc=cf3c542f004b75c5310c637fc4dcccd6
-md5_exe=a1bc2833447d8d110bc9f37c835010f3
+version=151208
+location_arc=2284777,x4B25F414,https://github.com/Maximus5/ConEmu/releases/download/v15.12.08/ConEmuPack.151208.7z
+location_exe=4599720,xF93AB0B8,https://github.com/Maximus5/ConEmu/releases/download/v15.12.08/ConEmuSetup.151208.exe
+md5_arc=d97b3877ad746a48c6c35d6e048e6bc6
+md5_exe=fad08b6f60bbf5b9129c1055f68c4150
