ConEmu 150813d AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -11,9 +11,11 @@ md5_arc=3b0176cd9e225d801aed8af7dfbd429d
 md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 
 [ConEmu_Preview_2]
-version=150813c
-location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
-location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
+version=150813d
+location_arc=2240562,xB568212F,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13d/ConEmuPack.150813d.7z
+location_exe=4536232,x1B7376FE,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13d/ConEmuSetup.150813d.exe
+md5_arc=d3af25868e31319a56aba958f5331a3e
+md5_exe=907d4a19fa8e11854eba5d05f74fe091
 
 [ConEmu_Devel_2]
 version=151208
