ConEmu 151210 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=d3af25868e31319a56aba958f5331a3e
 md5_exe=907d4a19fa8e11854eba5d05f74fe091
 
 [ConEmu_Devel_2]
-version=151208
-location_arc=2284777,x4B25F414,https://github.com/Maximus5/ConEmu/releases/download/v15.12.08/ConEmuPack.151208.7z
-location_exe=4599720,xF93AB0B8,https://github.com/Maximus5/ConEmu/releases/download/v15.12.08/ConEmuSetup.151208.exe
-md5_arc=d97b3877ad746a48c6c35d6e048e6bc6
-md5_exe=fad08b6f60bbf5b9129c1055f68c4150
+version=151210
+location_arc=2283088,x6EBB5904,https://github.com/Maximus5/ConEmu/releases/download/v15.12.10/ConEmuPack.151210.7z
+location_exe=4592552,xD67FA59F,https://github.com/Maximus5/ConEmu/releases/download/v15.12.10/ConEmuSetup.151210.exe
+md5_arc=80a6d84d465a471c36afa2e96282b7bf
+md5_exe=80eb80209a8b0e9ec8de4bb261392eae
