--- a/version.ini
+++ b/version.ini
@@ -11,11 +11,11 @@ md5_arc=3b0176cd9e225d801aed8af7dfbd429d
 md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 
 [ConEmu_Preview_2]
-version=150813d
-location_arc=2240562,xB568212F,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13d/ConEmuPack.150813d.7z
-location_exe=4536232,x1B7376FE,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13d/ConEmuSetup.150813d.exe
-md5_arc=d3af25868e31319a56aba958f5331a3e
-md5_exe=907d4a19fa8e11854eba5d05f74fe091
+version=150813e
+location_arc=2240305,x9B1D5F61,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13e/ConEmuPack.150813e.7z
+location_exe=4537256,x070AAED6,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13e/ConEmuSetup.150813e.exe
+md5_arc=eabe6431a3a8ddd9573f208f62592f0e
+md5_exe=78e47b463eec70843f5985948a663f77
 
 [ConEmu_Devel_2]
 version=151210
