--- a/version.ini
+++ b/version.ini
@@ -11,11 +11,11 @@ md5_arc=3b0176cd9e225d801aed8af7dfbd429d
 md5_exe=3c9cf12f263a67befe851a26b3f76bc6
 
 [ConEmu_Preview_2]
-version=150813e
-location_arc=2240305,x9B1D5F61,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13e/ConEmuPack.150813e.7z
-location_exe=4537256,x070AAED6,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13e/ConEmuSetup.150813e.exe
-md5_arc=eabe6431a3a8ddd9573f208f62592f0e
-md5_exe=78e47b463eec70843f5985948a663f77
+version=150813f
+location_arc=2240973,x8145D755,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuPack.150813f.7z
+location_exe=4537256,x336E7E67,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuSetup.150813f.exe
+md5_arc=500280493193fac891e39edbded1a9bf
+md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Devel_2]
 version=151210
