ConEmu 151217 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=500280493193fac891e39edbded1a9bf
 md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Devel_2]
-version=151210
-location_arc=2283088,x6EBB5904,https://github.com/Maximus5/ConEmu/releases/download/v15.12.10/ConEmuPack.151210.7z
-location_exe=4592552,xD67FA59F,https://github.com/Maximus5/ConEmu/releases/download/v15.12.10/ConEmuSetup.151210.exe
-md5_arc=80a6d84d465a471c36afa2e96282b7bf
-md5_exe=80eb80209a8b0e9ec8de4bb261392eae
+version=151217
+location_arc=2291951,x30DFB0FA,https://github.com/Maximus5/ConEmu/releases/download/v15.12.17/ConEmuPack.151217.7z
+location_exe=4602792,x1C283155,https://github.com/Maximus5/ConEmu/releases/download/v15.12.17/ConEmuSetup.151217.exe
+md5_arc=67c20c3aa4ad25465ce7c4433d55266a
+md5_exe=04a7e4cd6d51a47eb9d0bc35974247dd
