ConEmu 151222 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=500280493193fac891e39edbded1a9bf
 md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Devel_2]
-version=151217
-location_arc=2291951,x30DFB0FA,https://github.com/Maximus5/ConEmu/releases/download/v15.12.17/ConEmuPack.151217.7z
-location_exe=4602792,x1C283155,https://github.com/Maximus5/ConEmu/releases/download/v15.12.17/ConEmuSetup.151217.exe
-md5_arc=67c20c3aa4ad25465ce7c4433d55266a
-md5_exe=04a7e4cd6d51a47eb9d0bc35974247dd
+version=151222
+location_arc=2293997,x59AE3792,https://github.com/Maximus5/ConEmu/releases/download/v15.12.22/ConEmuPack.151222.7z
+location_exe=4605864,x247F6A58,https://github.com/Maximus5/ConEmu/releases/download/v15.12.22/ConEmuSetup.151222.exe
+md5_arc=70ab8e55b15e30c7899906078f96dfd5
+md5_exe=08ccf09db497adca47d4b5ad09b1835a
