--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=500280493193fac891e39edbded1a9bf
 md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Devel_2]
-version=151222
-location_arc=2293997,x59AE3792,https://github.com/Maximus5/ConEmu/releases/download/v15.12.22/ConEmuPack.151222.7z
-location_exe=4605864,x247F6A58,https://github.com/Maximus5/ConEmu/releases/download/v15.12.22/ConEmuSetup.151222.exe
-md5_arc=70ab8e55b15e30c7899906078f96dfd5
-md5_exe=08ccf09db497adca47d4b5ad09b1835a
+version=151224
+location_arc=2289413,x600D4A04,https://github.com/Maximus5/ConEmu/releases/download/v15.12.24/ConEmuPack.151224.7z
+location_exe=4606888,xCCC9D4C6,https://github.com/Maximus5/ConEmu/releases/download/v15.12.24/ConEmuSetup.151224.exe
+md5_arc=f0b9691f13be8c41a788ee21223d14d9
+md5_exe=648fc6715acd352bf3faaaee32017006
