--- a/_data/toc.yml
+++ b/_data/toc.yml
@@ -467,7 +467,7 @@
       rus: "Cygwin/Msys connector"
       url: "CygwinMsysConnector.html"
     -
-      eng: "Cygwin's & user's profile"
+      eng: "Cygwin & user's profile"
       rus: "Cygwin и профиль пользователя"
       url: "CygwinHome.html"
     -
