--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=500280493193fac891e39edbded1a9bf
 md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Devel_2]
-version=151224
-location_arc=2289413,x600D4A04,https://github.com/Maximus5/ConEmu/releases/download/v15.12.24/ConEmuPack.151224.7z
-location_exe=4606888,xCCC9D4C6,https://github.com/Maximus5/ConEmu/releases/download/v15.12.24/ConEmuSetup.151224.exe
-md5_arc=f0b9691f13be8c41a788ee21223d14d9
-md5_exe=648fc6715acd352bf3faaaee32017006
+version=160111
+location_arc=2291179,x99058D1C,https://github.com/Maximus5/ConEmu/releases/download/v16.01.11/ConEmuPack.160111.7z
+location_exe=4605352,x8DFE3692,https://github.com/Maximus5/ConEmu/releases/download/v16.01.11/ConEmuSetup.160111.exe
+md5_arc=b3c6b330d96dd2edf36e7bcf7b2c7b76
+md5_exe=5fb74c1c0251d4ed6179f4512cc679a9
