--- a/version.ini
+++ b/version.ini
@@ -4,11 +4,11 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=150813c
-location_arc=2226909,x6E41C334,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuPack.150813c.7z
-location_exe=4524968,x48788310,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13c/ConEmuSetup.150813c.exe
-md5_arc=3b0176cd9e225d801aed8af7dfbd429d
-md5_exe=3c9cf12f263a67befe851a26b3f76bc6
+version=150813f
+location_arc=2240973,x8145D755,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuPack.150813f.7z
+location_exe=4537256,x336E7E67,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuSetup.150813f.exe
+md5_arc=500280493193fac891e39edbded1a9bf
+md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Preview_2]
 version=150813f
