ConEmu 160124 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=500280493193fac891e39edbded1a9bf
 md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Devel_2]
-version=160111
-location_arc=2291179,x99058D1C,https://github.com/Maximus5/ConEmu/releases/download/v16.01.11/ConEmuPack.160111.7z
-location_exe=4605352,x8DFE3692,https://github.com/Maximus5/ConEmu/releases/download/v16.01.11/ConEmuSetup.160111.exe
-md5_arc=b3c6b330d96dd2edf36e7bcf7b2c7b76
-md5_exe=5fb74c1c0251d4ed6179f4512cc679a9
+version=160124
+location_arc=2293236,x85E2BF46,https://github.com/Maximus5/ConEmu/releases/download/v16.01.24/ConEmuPack.160124.7z
+location_exe=4609960,xA26474EF,https://github.com/Maximus5/ConEmu/releases/download/v16.01.24/ConEmuSetup.160124.exe
+md5_arc=acf2a06741290b68de1a0a64c59f4e6b
+md5_exe=7db9d45d0fdb360a8231f66e0172a371
