ConEmu 160202 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=500280493193fac891e39edbded1a9bf
 md5_exe=bdb2911de048ded2adbf2df07dc192b2
 
 [ConEmu_Devel_2]
-version=160124
-location_arc=2293236,x85E2BF46,https://github.com/Maximus5/ConEmu/releases/download/v16.01.24/ConEmuPack.160124.7z
-location_exe=4609960,xA26474EF,https://github.com/Maximus5/ConEmu/releases/download/v16.01.24/ConEmuSetup.160124.exe
-md5_arc=acf2a06741290b68de1a0a64c59f4e6b
-md5_exe=7db9d45d0fdb360a8231f66e0172a371
+version=160202
+location_arc=2326517,x1EC0B14B,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuPack.160202.7z
+location_exe=4614568,x659816A7,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuSetup.160202.exe
+md5_arc=dc18048f8fa5fd6cd1be92655c1c21e9
+md5_exe=9867e4efcb3754d94c812f6c317b08f3
