--- a/version.ini
+++ b/version.ini
@@ -4,11 +4,11 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=150813f
-location_arc=2240973,x8145D755,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuPack.150813f.7z
-location_exe=4537256,x336E7E67,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuSetup.150813f.exe
-md5_arc=500280493193fac891e39edbded1a9bf
-md5_exe=bdb2911de048ded2adbf2df07dc192b2
+version=150813g
+location_arc=2271937,xB6751E1F,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13g/ConEmuPack.150813g.7z
+location_exe=4539816,x317A5896,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13g/ConEmuSetup.150813g.exe
+md5_arc=7b214f3d3f32d29345b303979b9e630a
+md5_exe=5cd6b5eb7c91103ac574c8c1a654c19d
 
 [ConEmu_Preview_2]
 version=150813f
