--- a/version.ini
+++ b/version.ini
@@ -11,11 +11,11 @@ md5_arc=7b214f3d3f32d29345b303979b9e630a
 md5_exe=5cd6b5eb7c91103ac574c8c1a654c19d
 
 [ConEmu_Preview_2]
-version=150813f
-location_arc=2240973,x8145D755,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuPack.150813f.7z
-location_exe=4537256,x336E7E67,https://github.com/Maximus5/ConEmu/releases/download/v15.08.13f/ConEmuSetup.150813f.exe
-md5_arc=500280493193fac891e39edbded1a9bf
-md5_exe=bdb2911de048ded2adbf2df07dc192b2
+version=160204
+location_arc=2326933,x1A7B875F,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuPack.160204.7z
+location_exe=4615592,x9FDC4890,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuSetup.160204.exe
+md5_arc=5cd265b613301af225116ffd2bf0d1ab
+md5_exe=e06b9d1fd011201dac49d3c1ffda312b
 
 [ConEmu_Devel_2]
 version=160202
