--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=5cd265b613301af225116ffd2bf0d1ab
 md5_exe=e06b9d1fd011201dac49d3c1ffda312b
 
 [ConEmu_Devel_2]
-version=160202
-location_arc=2326517,x1EC0B14B,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuPack.160202.7z
-location_exe=4614568,x659816A7,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuSetup.160202.exe
-md5_arc=dc18048f8fa5fd6cd1be92655c1c21e9
-md5_exe=9867e4efcb3754d94c812f6c317b08f3
+version=160204
+location_arc=2326933,x1A7B875F,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuPack.160204.7z
+location_exe=4615592,x9FDC4890,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuSetup.160204.exe
+md5_arc=5cd265b613301af225116ffd2bf0d1ab
+md5_exe=e06b9d1fd011201dac49d3c1ffda312b
