ConEmu 160207 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -11,15 +11,15 @@ md5_arc=7b214f3d3f32d29345b303979b9e630a
 md5_exe=5cd6b5eb7c91103ac574c8c1a654c19d
 
 [ConEmu_Preview_2]
-version=160204
-location_arc=2326933,x1A7B875F,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuPack.160204.7z
-location_exe=4615592,x9FDC4890,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuSetup.160204.exe
-md5_arc=5cd265b613301af225116ffd2bf0d1ab
-md5_exe=e06b9d1fd011201dac49d3c1ffda312b
+version=160207
+location_arc=2327702,xB780F5F6,https://github.com/Maximus5/ConEmu/releases/download/v16.02.07/ConEmuPack.160207.7z
+location_exe=4615080,xC5A8E96B,https://github.com/Maximus5/ConEmu/releases/download/v16.02.07/ConEmuSetup.160207.exe
+md5_arc=a7b0674cd80700677ffcea4179d3386d
+md5_exe=8db20f97a5788ef0a10b8e4f3115cf6a
 
 [ConEmu_Devel_2]
-version=160204
-location_arc=2326933,x1A7B875F,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuPack.160204.7z
-location_exe=4615592,x9FDC4890,https://github.com/Maximus5/ConEmu/releases/download/v16.02.04/ConEmuSetup.160204.exe
-md5_arc=5cd265b613301af225116ffd2bf0d1ab
-md5_exe=e06b9d1fd011201dac49d3c1ffda312b
+version=160202
+location_arc=2326517,x1EC0B14B,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuPack.160202.7z
+location_exe=4614568,x659816A7,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuSetup.160202.exe
+md5_arc=dc18048f8fa5fd6cd1be92655c1c21e9
+md5_exe=9867e4efcb3754d94c812f6c317b08f3
