--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=a7b0674cd80700677ffcea4179d3386d
 md5_exe=8db20f97a5788ef0a10b8e4f3115cf6a
 
 [ConEmu_Devel_2]
-version=160202
-location_arc=2326517,x1EC0B14B,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuPack.160202.7z
-location_exe=4614568,x659816A7,https://github.com/Maximus5/ConEmu/releases/download/v16.02.02/ConEmuSetup.160202.exe
-md5_arc=dc18048f8fa5fd6cd1be92655c1c21e9
-md5_exe=9867e4efcb3754d94c812f6c317b08f3
+version=160207
+location_arc=2327702,xB780F5F6,https://github.com/Maximus5/ConEmu/releases/download/v16.02.07/ConEmuPack.160207.7z
+location_exe=4615080,xC5A8E96B,https://github.com/Maximus5/ConEmu/releases/download/v16.02.07/ConEmuSetup.160207.exe
+md5_arc=a7b0674cd80700677ffcea4179d3386d
+md5_exe=8db20f97a5788ef0a10b8e4f3115cf6a
