ConEmu 160211 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -11,11 +11,11 @@ md5_arc=7b214f3d3f32d29345b303979b9e630a
 md5_exe=5cd6b5eb7c91103ac574c8c1a654c19d
 
 [ConEmu_Preview_2]
-version=160207
-location_arc=2327702,xB780F5F6,https://github.com/Maximus5/ConEmu/releases/download/v16.02.07/ConEmuPack.160207.7z
-location_exe=4615080,xC5A8E96B,https://github.com/Maximus5/ConEmu/releases/download/v16.02.07/ConEmuSetup.160207.exe
-md5_arc=a7b0674cd80700677ffcea4179d3386d
-md5_exe=8db20f97a5788ef0a10b8e4f3115cf6a
+version=160211
+location_arc=2381352,xCB8959D6,https://github.com/Maximus5/ConEmu/releases/download/v16.02.11/ConEmuPack.160211.7z
+location_exe=4661160,x0E0EA4CB,https://github.com/Maximus5/ConEmu/releases/download/v16.02.11/ConEmuSetup.160211.exe
+md5_arc=cf570ed9614c176289b5e9d70d120b78
+md5_exe=5b19e5a45fd81e575b8d1666167f4ac0
 
 [ConEmu_Devel_2]
 version=160207
