--- a/version.ini
+++ b/version.ini
@@ -18,8 +18,8 @@ md5_arc=cf570ed9614c176289b5e9d70d120b78
 md5_exe=5b19e5a45fd81e575b8d1666167f4ac0
 
 [ConEmu_Devel_2]
-version=160211
-location_arc=2381352,xCB8959D6,https://github.com/Maximus5/ConEmu/releases/download/v16.02.11/ConEmuPack.160211.7z
-location_exe=4661160,x0E0EA4CB,https://github.com/Maximus5/ConEmu/releases/download/v16.02.11/ConEmuSetup.160211.exe
-md5_arc=cf570ed9614c176289b5e9d70d120b78
-md5_exe=5b19e5a45fd81e575b8d1666167f4ac0
+version=160217
+location_arc=2382078,xCEA9A232,https://github.com/Maximus5/ConEmu/releases/download/v16.02.17/ConEmuPack.160217.7z
+location_exe=4665768,xCD1E6B7C,https://github.com/Maximus5/ConEmu/releases/download/v16.02.17/ConEmuSetup.160217.exe
+md5_arc=87e12a5fda8fb0c6a61a8080955433be
+md5_exe=c2dc37dbb0f521f845128d459dc197c9
